syntax = "proto3";

service DataStorageAPI {
  rpc read (FileInput) returns (IntegerIterator) {}
  rpc userTranslate (FileOutput) returns (WritingResult) {} 
}

message IntegerIterator {
  repeated int32 value = 1;
}

message FileInput {
  string path = 1;
}

message FileOutput {
  string path = 1;
}

enum Result {
  UNKNOWN = 0;
  SUCCESS = 1;
  FAILURE = 2;
}

message WritingResult {
  Result result = 1;
}


